--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </section>
     <section class="work">
 
-        <div class="container">
+        <div class="container-work">
             <div class="section">
                 <h2>Make your money transfer simple and clear</h2>
                 <ul class="features">
