Satte dit en checkpoint SVG samt ge mer utrymme mellan raderna.

--- a/index.html
+++ b/index.html
@@ -99,10 +99,8 @@
         <div class="simple">
         <div class="marks">
             <h2>Make your money transfer simple and clear</h2>
-            <ul>
-                <li>✓Banking transactions are free for you</li>
-                <li>✓No monthly cash commission</li>
-                <li>✓Manage Payments and transactions online</li>
+            <ul class="list">¨
+                <li><img src="assets/check.svg" alt="check">Banking</li>
             </ul>
             <a href="#" class="learn-more">Learn more</a>
             <div class="contact">
