kommer nog göra om hela work section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="/assets/trio.svg" alt="" />
         </div>
         <div class="text">
-            <h3>Latest transaction history</h3>
+            <h2>Latest transaction history</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero inventore dolorum soluta et nisi aspernatur voluptas distinctio exercitationem, culpa veritatis.</p>
         </div>
     </section>
@@ -99,9 +99,11 @@
         <div class="simple">
         <div class="marks">
             <h2>Make your money transfer simple and clear</h2>
-            <ul class="list">¨
-                <li><img src="assets/check.svg" alt="check">Banking</li>
-            </ul>
+            <div class="list">
+                <p><img src="assets/check.svg" alt="check">Banking transactions are free for you</p>
+                <p><img src="assets/check.svg" alt="check">No monthly cash commission</p>
+                <p><img src="assets/check.svg" alt="check">Manage Payments and transactions online</p>
+            </div>
             <a href="#" class="learn-more">Learn more</a>
             <div class="contact">
             <img src="/assets/contacts.svg" alt="" />
